fix:Image caption alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -399,13 +399,9 @@
 .image-tool__caption {
   margin-bottom: 0px !important;
 }
-
-.image-tool--caption {
-  padding-bottom: 2.8rem !important;
-}
 @media (max-width: 768px) {
-  .image-tool--caption {
-    padding-bottom: 2.3rem !important;
+  .image-tool__caption {
+    margin-bottom: 12px !important;
   }
 }
 
